src/test/deca/context/invalid/sansObjet/BadMultDeclarationOftheSameVariable.deca
{
    int x;
    float x;
    boolean x;
}